src/test/ui/issue-28776.stderr
error[E0133]: call to unsafe function requires unsafe function or block
  --> $DIR/issue-28776.rs:14:5
   |
14 |     (&ptr::write)(1 as *mut _, 42);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function

error: aborting due to previous error

